--- a/src/main/webapp/contact.html
+++ b/src/main/webapp/contact.html
@@ -45,7 +45,7 @@ Bootstrap 5 Form Pack Template
                                 <i class="bi-box"></i>
 
                                 <span>
-                                    Kool Form Pack
+                                    Kool Foorm Pack
                                 </span>
                             </a>
 
